(executable
 (name lib)
 (enabled_if
  (or
   (= %{context_name} "device.ios")
   (= %{context_name} "simulator")
   (= %{context_name} "simulator.ios")))
 (libraries
  threads
  unix
  sqlite3
  ; base
  sexplib)
 (flags
  (:standard
  ;  -verbose
   -noautolink
   -cclib -lsqlite3_stubs
  ;  -cclib -L%{env:OPAM_SWITCH_PREFIX=/opt/local/lib}/ios-deps/sqlite3/lib
  ;  -cclib -lsqlite3
   -cclib -lunix
   -cclib -lthreadsnat))
 (foreign_stubs
  (language c)
  (flags (:standard -DCAML_NAME_SPACE))
  (names libwrap))
 (foreign_stubs
  (language c)
  (flags
   (:standard
    ;-framework Foundation
    -x objective-c
    -DCAML_NAME_SPACE))
  (names cocoa_stubs))
 (modes (native object))
 (preprocess (pps ppx_sexp_conv)))

(rule
 (enabled_if
  (or
   (= %{context_name} "device.ios")
   (= %{context_name} "simulator.ios")))
 (deps lib.exe.o)
 (targets libcaml.a)
 (action (run ar cq %{targets} %{deps})))
